test/files/neg/cycle-bounds.check
cycle-bounds.scala:5: error: illegal cyclic reference involving type T
class NotOk[T <: Comparable[_ <: T]]
                            ^
one error found
